jena-shex/src/test/files/spec/negativeStructure/TwoNegation2.shex
# Negated circular reference to :S via :T.
PREFIX :       <http://example.org/>

:S (    (NOT @:T)
    AND @:U )
:T {
  :a NOT @:S
} 
:U {
  :b @:S
} 
